--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -7,13 +8,12 @@ html, body {
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 100, 200);
 	text-decoration: none;
 }
 
@@ -22,14 +22,17 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 80, 160);
 }
 
 label {
 	display: block;
 }
 
-input, button, select, textarea {
+input,
+button,
+select,
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
@@ -60,4 +63,77 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+
+/* Tiny mce editor */
+
+html,
+body {
+	height: 100%;
+	margin: 0px;
+}
+
+#svelte-app{
+	height: 100%
+}
+
+/* https://stackoverflow.com/questions/20167461/div-inside-of-div-100-height-makes-overflow-off-screen
+When we say height 100% => 100% of the parent if there are extra elements it will more than the available height
+*/
+#top-bar{
+	height:4%
+}
+
+#tiny-mce-holder {
+	height: 96%;
+	margin: 0px;
+}
+
+
+/* tinymce skin*/ 
+
+.tox-tinymce{
+	border: 0px solid #eee !important
+}
+
+.tinymce-wrapper{
+	height: 100%
+}
+
+.mce-edit-area {
+	display: flex !important;
+	flex-flow: column;
+}
+
+.mce-edit-area iframe {
+	flex: 1 1 auto;
+}
+
+.mce-tinymce {
+	height: 100%;
+}
+
+.mce-tinymce.mce-container {
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.mce-panel {
+	border: 0
+}
+
+.mce-container-body.mce-stack-layout {
+	display: flex;
+	flex-flow: column;
+	height: 100%;
+}
+
+.mce-stack-layout-item {
+	flex: 0 0 auto;
+}
+
+.mce-edit-area {
+	flex: 1 1 auto;
 }
